# stopwatch

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  justfile  pyproject.toml  zensical.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  publish.yml  zizmor.yml
CHANGELOG/: 0.1.0.md
docs/: api.md  budgets.md  cli.md  durations.md  index.md  installation.md  instrumentation.md  manual-stopwatch.md  recipes.md  registries.md  sinks-and-exports.md  testing-and-configuration.md  usage.md
src/stopwatch/: __init__.py  __main__.py  _api.py  _clock.py  _config.py  _duration.py  _exceptions.py  _models.py  _registry.py  _stopwatch.py  cli.py  sinks.py
tests/: test_cli.py  test_duration.py  test_registry.py  test_stopwatch.py
