[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "advanced-stopwatch"
version = "0.1.0"
description = "Precise, structured timing for Python applications."
readme = "README.md"
authors = [
  {name = "Abel Kidane Haile", email = "abelkidanehaile@gmail.com"}
]
maintainers = [
  {name = "Abel Kidane Haile", email = "abelkidanehaile@gmail.com"}
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]
license = {text = "MIT"}
dependencies = []
requires-python = ">= 3.12"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "typecheck" },
]
lint = [
    "ruff",
]
test = [
    "coverage",
    "pytest",
]
typecheck = [
    "ty",
]
docs = [
    "zensical",
    "mkdocstrings-python",
]

[project.urls]
bugs = "https://github.com/AbelKidaneHaile/stopwatch/issues"
changelog = "https://github.com/AbelKidaneHaile/stopwatch/releases"
documentation = "https://abelkidanehaile.github.io/stopwatch/"
homepage = "https://github.com/AbelKidaneHaile/stopwatch"

[project.scripts]
stopwatch = "stopwatch.cli:main"

[tool.hatch.build.targets.wheel]
# The PyPI distribution is named advanced-stopwatch, while the public Python
# import intentionally remains `stopwatch`.
packages = ["src/stopwatch"]

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "UP047",  # ParamSpec remains clearer for decorator overloads than PEP 695 syntax.
]

[tool.coverage.run]
branch = true
parallel = true
source = ["src/", "tests/"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 50
exclude_also = [
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@overload",
    "@typing.overload",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = true
default-groups = ["dev"]
